<resources>
    <string name="app_name">Housewife Kitchen</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="sign_in">Sign in</string>
    <string name="email">Email</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="do_have_an_account">Do have an account?</string>
    <string name="create_an_account">Create An Account</string>
    <string name="reset_password">Reset Password</string>
    <string name="dont_have_any_account">Dont have any Account?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="user_name_or_eamil">User Name Or Eamil</string>
    <string name="confirm_code">Confirm Code</string>
    <string name="code">Code</string>
    <string name="forget_password">Forget Password</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="don_t_receive_code">Don\'t Receive Code</string>
    <string name="resend">Resend</string>
    <string name="update_profile">Update Profile</string>
    <string name="save_changes">Save Changes</string>
    <string name="find_your_favorite_meal">Find Your Favorite Meal</string>
    <string name="see_all">See All</string>
    <string name="fast_meals_to_prepare">Fast Meals to Prepare</string>
    <string name="register_meals_to_prepare">Register Meals to Prepare</string>
    <string name="categories_meal">Categories Meal</string>
    <string name="offers_meals_or_chefs_offers">Offers Meals Or Chefs Offers</string>
    <string name="videos_from_chefs">Videos from chefs</string>
    <string name="favorite_chefs">Favorite Chefs</string>
    <string name="more_meals">More Meals</string>
    <string name="search">Search</string>
    <string name="fast_prepared">Fast Prepared</string>
    <string name="title_activity_location_search">LocationSearchActivity</string>
    <string name="my_favourite">My Favourite</string>
    <string name="my_order">My Order</string>
    <string name="more">More</string>
    <string name="payment_method">Payment Method</string>
    <string name="reward_credits">Reward Credits</string>
    <string name="my_promo_code">My Promo Code</string>
    <string name="settings">Settings</string>
    <string name="invite_friend">Invite Friend</string>
    <string name="help_center">Help Center</string>
    <string name="about_us">About Us</string>
    <string name="save">Save</string>
    <string name="choose_state">Choose State</string>
    <string name="choose_area">Choose Area</string>
    <string name="choose_country">Choose Country</string>
    <string name="flat_number">Flat Number</string>
    <string name="floor_number">Floor Number</string>
    <string name="building_number">Building Number</string>
    <string name="choose_other_location">Choose Other Location</string>
    <string name="choose_current_location">Choose Current Location</string>
    <string name="choose_another_location">Choose Another Location</string>
    <string name="title_activity_get_location_maps">GetLocationMapsActivity</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="your_order_is_successfully">Your Order is Successfully.</string>
    <string name="go_to_order">Go to Order</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="you_can_track_the_delivery_in_the_order_section">You can track the delivery in the \'Order\' section.</string>
    <string name="orders">Orders</string>
    <string name="others">Others</string>
    <string name="chefs">Chefs</string>
    <string name="meals">Meals</string>
    <string name="videos">Videos</string>
    <string name="language_settings">Language Settings</string>
    <string name="account_settings">Account Settings</string>
    <string name="settings_apps">Settings Apps</string>
</resources>