<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.shady.housewifekitchen.views.home.ui.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_favourite"
        android:name="com.shady.housewifekitchen.views.home.ui.FavouriteFragment"
        android:label="@string/my_favourite"
        tools:layout="@layout/fragment_favourite" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.shady.housewifekitchen.views.home.ui.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_my_order"
        android:name="com.shady.housewifekitchen.views.home.ui.MyOrderFragment"
        android:label="@string/my_order"
        tools:layout="@layout/fragment_my_order" />

    <fragment
        android:id="@+id/navigation_menu"
        android:name="com.shady.housewifekitchen.views.home.ui.MenuFragment"
        android:label="@string/more"
        tools:layout="@layout/fragment_menu" />

</navigation>