<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.loginsystem.LoginActivity">

    <LinearLayout
        android:orientation="vertical"
        android:gravity="center"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:padding="16dp"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/logo1"/>

            <TextView
                android:textSize="24dp"
                android:textColor="@color/txtColor1"
                android:textStyle="bold"
                android:padding="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"/>

        </LinearLayout>

        <LinearLayout
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:textSize="20dp"
                android:textColor="@color/txtColor1"
                android:textStyle="bold"
                android:padding="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"/>

            <TextView
                android:textSize="18dp"
                android:textColor="@color/txtColor1"
                android:padding="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor"/>

        </LinearLayout>

        <LinearLayout
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:textSize="18dp"
                android:textColor="@color/txtColor1"
                android:paddingHorizontal="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_name_or_eamil"/>

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:textColorHint="@color/txtColor4"
                app:boxStrokeColor="@color/btnColor1"
                android:inputType="textEmailAddress"
                android:hint="@string/email"/>

        </LinearLayout>

        <LinearLayout
            android:padding="16dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:textSize="18dp"
                android:textColor="@color/txtColor1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="8dp"
                android:text="@string/password"/>

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:textColorHint="@color/txtColor4"
                android:inputType="textPassword"
                android:hint="@string/password"/>

        </LinearLayout>

        <LinearLayout
            android:padding="16dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/btnSignin"
                style="@style/btnStyleHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_app3"
                android:paddingVertical="16dp"
                android:paddingHorizontal="32dp"
                android:text="@string/login"
                android:textStyle="bold"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:padding="16dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:cardCornerRadius="25dp"
                android:layout_marginHorizontal="8dp"
                app:cardBackgroundColor="@color/btnColor2">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:src="@drawable/google" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:cardCornerRadius="25dp"
                android:layout_marginHorizontal="8dp"
                app:cardBackgroundColor="@color/fbColor">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:src="@drawable/facebook"
                    app:tint="@color/white" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:padding="16dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="16dp"
                android:textColor="@color/txtColor1"
                android:padding="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"/>

            <TextView
                android:textSize="16dp"
                android:textColor="@color/txtColor3"
                android:padding="8dp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset_password"/>

        </LinearLayout>

        <LinearLayout
            android:padding="16dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:textSize="16dp"
                android:textColor="@color/txtColor4"
                android:padding="8dp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dont_have_any_account"/>

            <TextView
                android:id="@+id/goSignUp"
                style="@style/btnStyleHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btnborder3"
                android:textColor="@color/txtColor1"
                android:paddingVertical="16dp"
                android:paddingHorizontal="32dp"
                android:layout_margin="8dp"
                android:text="@string/create_an_account"
                android:textStyle="bold"
                android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>