<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.loginsystem.ForgetPasswordActivity">

    <LinearLayout
        android:orientation="vertical"
        android:gravity="center"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:padding="16dp"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/logo1"/>

            <TextView
                android:textSize="24dp"
                android:textColor="@color/txtColor1"
                android:textStyle="bold"
                android:padding="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"/>

        </LinearLayout>

        <LinearLayout
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:textSize="20dp"
                android:textColor="@color/txtColor1"
                android:textStyle="bold"
                android:padding="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"/>

            <TextView
                android:textSize="18dp"
                android:textColor="@color/txtColor1"
                android:padding="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor"/>

        </LinearLayout>

        <LinearLayout
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:textSize="18dp"
                android:textColor="@color/txtColor1"
                android:paddingHorizontal="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"/>

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:textColorHint="@color/txtColor4"
                app:boxStrokeColor="@color/btnColor1"
                android:inputType="textEmailAddress"
                android:hint="@string/email_address"/>

        </LinearLayout>

        <LinearLayout
            android:padding="16dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/btnSignin"
                style="@style/btnStyleHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_app3"
                android:paddingVertical="16dp"
                android:paddingHorizontal="32dp"
                android:text="@string/forgot_password"
                android:textStyle="bold"
                android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>